# rpc.py

./: README.md  README.rst  async_server.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  pypi.yml  setup.yml  test.yml
examples/: async_client.py  async_server.py  sync_client.py  sync_server.py
rpcpy/: __version__.py  application.py  asgi.py  client.py  datastructures.py  exceptions.py  openapi.py  serializers.py  types.py  typing.py  utils.py  version.py  wsgi.py
rpcpy/utils/: __init__.py  formparsers.py  openapi.py
script/: check.py  test.py  upload.py
tests/: tc.py  test_application.py  test_asgi.py  test_client.py  test_datastructures.py  test_serializers.py  test_version.py  test_wsgi.py  ts.py
