[tool.poetry]
name = "rpc.py"
version = "0.4.1"
description = "An fast and powerful RPC framework based on ASGI/WSGI."
authors = ["abersheeran <me@abersheeran.com>"]
readme = "README.md"
license = "Apache-2.0"

homepage = "https://github.com/abersheeran/rpc.py"
repository = "https://github.com/abersheeran/rpc.py"

classifiers=[
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]

packages = [
    { include = "rpcpy" },
]

[tool.poetry.dependencies]
python = "^3.6"

typing-extensions = {version = "^3.7.4", python = "<3.8"}
httpx = {version = "^0.16.0", optional = true}  # for client and test
pydantic = {version = "^1.6.1", optional = true}  # for openapi docs
msgpack = {version = "^1.0.0", optional = true}

[tool.poetry.extras]
client = ["httpx"]
type = ["pydantic"]
msgpack = ["msgpack"]
full = ["httpx", "pydantic", "msgpack"]

[tool.poetry.dev-dependencies]
flake8 = "*"
mypy = "*"
black = {version = "*", allow-prereleases = true}
pytest = "^5.4.3"
pytest-asyncio = "^0.14.0"

[tool.dephell.main]
from = { format = "poetry", path = "pyproject.toml" }
to = { format = "setuppy", path = "setup.py" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
