[tool.poetry]
authors = ["abersheeran <me@abersheeran.com>"]
description = "An fast and powerful RPC framework based on ASGI/WSGI."
license = "Apache-2.0"
name = "rpc.py"
readme = "README.md"
version = "0.6.0"

homepage = "https://github.com/abersheeran/rpc.py"
repository = "https://github.com/abersheeran/rpc.py"

classifiers = [
  "Programming Language :: Python :: 3",
  "Typing :: Typed",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]

packages = [
  {include = "rpcpy"},
]

[tool.poetry.dependencies]
python = "^3.7"

baize = "*"
cbor2 = {version = "^5.2.0", optional = true}
httpx = {version = "^0.22.0", optional = true}# for client and test
msgpack = {version = "^1.0.0", optional = true}
pydantic = {version = "^1.9", optional = true}# for openapi docs
typing-extensions = {version = "*", python = "<3.8"}

[tool.poetry.extras]
cbor = ["cbor2"]
client = ["httpx"]
full = ["httpx", "pydantic", "msgpack", "cbor2"]
msgpack = ["msgpack"]
type = ["pydantic"]

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
flake8 = "*"
isort = "*"
mypy = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"

[tool.black]
line-length = 91

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["*/.venv/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "raise RuntimeError",
  "if False:",
  "assert False",
  "if typing.TYPE_CHECKING:",
  "if TYPE_CHECKING:",
  "@typing.overload",
]
show_missing = true
skip_covered = true

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
